--- a/keycloak-customized/pom.xml
+++ b/keycloak-customized/pom.xml
@@ -11,6 +11,7 @@
 
     <properties>
         <jib-maven-plugin.version>3.4.4</jib-maven-plugin.version>
+        <keycloak-webhook.version>0.8.3</keycloak-webhook.version>
     </properties>
 
     <dependencies>
@@ -24,10 +25,46 @@
             <artifactId>keycloak-themes</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>io.phasetwo.keycloak</groupId>
+            <artifactId>keycloak-magic-link</artifactId>
+            <version>0.38</version>
+        </dependency>
     </dependencies>
 
     <build>
         <plugins>
+            <plugin>
+                <groupId>com.googlecode.maven-download-plugin</groupId>
+                <artifactId>download-maven-plugin</artifactId>
+                <version>1.13.0</version>
+                <executions>
+                    <execution>
+                        <id>download keycloak-webhook core</id>
+                        <phase>process-resources</phase>
+                        <goals>
+                            <goal>wget</goal>
+                        </goals>
+                        <configuration>
+                            <url>https://github.com/vymalo/keycloak-webhook/releases/download/v${keycloak-webhook.version}/keycloak-webhook-provider-core-${keycloak-webhook.version}-all.jar</url>
+                            <outputFileName>keycloak-webhook-provider-core-${keycloak-webhook.version}-all.jar</outputFileName>
+                            <outputDirectory>${project.build.directory}/libs</outputDirectory>
+                        </configuration>
+                    </execution>
+                    <execution>
+                        <id>download keycloak-webhook http</id>
+                        <phase>process-resources</phase>
+                        <goals>
+                            <goal>wget</goal>
+                        </goals>
+                        <configuration>
+                            <url>https://github.com/vymalo/keycloak-webhook/releases/download/v${keycloak-webhook.version}/keycloak-webhook-provider-http-${keycloak-webhook.version}-all.jar</url>
+                            <outputFileName>keycloak-webhook-provider-http-${keycloak-webhook.version}-all.jar</outputFileName>
+                            <outputDirectory>${project.build.directory}/libs</outputDirectory>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
             <!-- Copy dependencies to target/libs -->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
